fixes for controls on tablet

--- a/app/less/default/core/variables.less
+++ b/app/less/default/core/variables.less
@@ -61,7 +61,7 @@
 
 // Small screen / tablet
 //** Deprecated `@screen-sm` as of v3.0.1
-@screen-sm:                  970px;
+@screen-sm:                  768px;
 
 // Medium screen / desktop
 //** Deprecated `@screen-md` as of v3.0.1
@@ -87,7 +87,7 @@
 //## Define the maximum width of `.container` for different screen sizes.
 
 // Small screen / tablet
-@container-tablet:             (950px + @grid-gutter-width);
+@container-tablet:             (720px + @grid-gutter-width);
 
 // Medium screen / desktop
 @container-desktop:            (990px + @grid-gutter-width);
