--- a/app/less/default/modules/media.less
+++ b/app/less/default/modules/media.less
@@ -37,6 +37,7 @@ input[type=range].volume-control {
 .media-controls {
     padding-right: 40px;
     width: 10px;
+    white-space: nowrap;
 }
 
 .img-user {
