--- a/app/less/tablet/modules/media.less
+++ b/app/less/tablet/modules/media.less
@@ -3,9 +3,19 @@
 // --------------------------------------------------
 
 .media-info {
-    max-width: 650px;
+    width: 650px;
 
     .footer & {
-        max-width: 350px;
+        width: 250px;
+    }
+}
+
+.media-controls {
+    text-align: center;
+    white-space: normal;
+
+    input[type="range"].volume-control {
+        margin-left: 0;
+        margin-top: 10px;
     }
 }
